# rust

./: .envrc  .gitignore  .mise.sh  1.sh  1.txt  Cargo.toml  README.md  about.md  about_md.coffee  build.native.sh  cargo.dist.sh  cli.new.sh  clippy.sh  dev.sh  dist.all.coffee  dist.sh  env.sh  github_action_runner.sh  init.sh  new.sh  newWasm.sh  package.json  pnpm-lock.yaml  replace_line.py  rmdbg.sh  run.sh  rustfmt.toml  service.sh  upgrade.coffee  ver.sh
_tmpl/: AGENTS.md  Cargo.toml  README.md  README.mdt
_tmpl/readme/: zh.md
_tmpl/src/: lib.rs
_tmpl/tests/: main.rs
_tmpl_wasm/: .gitignore  Cargo.toml  dist.sh  test.coffee  wasmTest.sh
about/: en.md  zh.md
add_space/: Cargo.toml  README.md  README.mdt
add_space/src/: lib.rs  main.rs
add_space/tests/: main.rs
addr_of/: Cargo.toml  README.md  README.mdt
aerr/: Cargo.toml  README.md  README.mdt
aerr/src/: err.rs  lib.rs
aiapi/: .envrc  Cargo.toml  README.md  README.mdt  test.sh
aiapi.old/: Cargo.toml  api.proto  build.rs
aiapi/src/: conf.rs  gemini.rs  gemini_from_yml.rs  lib.rs  openai.rs  openai_from_yml.rs  response.rs  response_to_error.rs  token_li.rs
aiapi/src/api/: baidu.rs  mod.rs  token.rs
aiapi/src/from_yml/: gemini.rs  mod.rs  openai.rs
aiapi/src/gemini/: error.rs  mod.rs
aiapi/tests/: main.rs
aier/: Cargo.toml  README.md  README.mdt
aier/src/: error.rs  lib.rs  net.rs
aier/tests/: main.rs
alive/: .envrc  Cargo.toml  README.md  README.mdt  api.proto  build.rs  dump.sh
alive/dump/data/: arg.sql  host.sql  ip.sql  kind.sql  log.sql  url.sql  watch.sql
alive/dump/function/: argId.sql  hostId.sql  urlId.sql
alive/dump/table/: arg.sql  host.sql  ip.sql  kind.sql  log.sql  url.sql  watch.sql
alive/dump/trigger/: watchLog.sql
alive/src/: cache.rs  cron.rs  curl.rs  db.rs  err.rs  err_duration.rs  hook.rs  id_v.rs  lib.rs  m.rs  ok.rs  recover.rs  should_send.rs  status.rs  timeout.rs  watch.rs
alive/src/hook/: mod.rs  mysql.rs  smtp.rs
alive/src/ip/: ipv6_proxy.rs  mod.rs
alive/tests/: main.rs
aliver/: .envrc  .gitignore  1.rs  Cargo.toml  Dockerfile  README.md  README.mdt  api.nt  api.proto  dev.sh  dist.fly.sh  dist.sh  docker.build.sh  docker.run.sh  docker.shell.sh  fly.config.sh  fly.dist.sh  fly.log.sh  fly.secret.env.set.sh  fly.toml  gen.coffee  gen.sdk.sh  run.sh  test.sh
aliver/alive/: .envrc  Cargo.toml  README.mdt
aliver/alive/dump/data/: arg.sql  host.sql  kind.sql  log.sql  watch.sql
aliver/alive/dump/table/: kind.sql  watch.sql
aliver/alive/src/: cron.rs  err.rs  ok.rs
aliver/alive/src/hook/: mysql.rs
aliver/js/: README.md  S.js  dist.sh  index.js  package.json  pnpm-lock.yaml
aliver/sh/: clippy.sh  pid.sh
aliver/src/: _mod.rs  bin.rs  index.rs  li.rs  mail.rs  main.rs  ping.rs
amid/: Cargo.toml  README.md  README.mdt
amid/src/: lib.rs
aok/: Cargo.toml  README.md  README.mdt
aok/src/: lib.rs
aok/tests/: main.rs
apart/: Cargo.toml  README.md  README.mdt
apart/src/: lib.rs
apart/tests/: main.rs
api_token/: Cargo.toml  README.md  README.mdt
async_wrap/: Cargo.toml  README.md  README.mdt
axum_cors/: Cargo.toml  README.md  README.mdt
axum_cors/src/: lib.rs
axum_graceful_restart/: Cargo.toml  README.md  README.mdt  test.sh
axum_graceful_restart/src/: lib.rs
axum_graceful_restart/tests/: Cargo.toml
axum_graceful_restart/tests/src/: main.rs
axum_layer/: Cargo.toml  README.md  README.mdt
axum_layer/src/: lib.rs  log.rs
b255/: Cargo.toml  README.md  README.mdt
b255/src/: decode.rs  encode.rs  error.rs  lib.rs  util.rs
b255/tests/: main.rs
b3s/: .gitignore  Cargo.toml
b3s/src/: lib.rs  main.rs
b62/: Cargo.toml  README.md  README.mdt
bce/: Cargo.toml  README.md  README.mdt
bce/src/: lib.rs
bce/tests/: main.rs
bgu/: Cargo.toml  README.md  README.mdt  api.proto  build.rs
bgu/src/: boot.rs  lib.rs  randiter.rs  ver.rs
bgu/tests/: host.rs  main.rs  mirror.rs
biased/: Cargo.toml  README.md  README.mdt
biased/src/: lib.rs
biased/tests/: main.rs
bing/: Cargo.toml  GEMINI.md  README.md  README.mdt
bing/src/: api.proto  doc.rs  lib.rs  open.rs  schema.rs  search.rs
bing/tests/: blog.md  main.rs
bintxt/: Cargo.toml  README.md  README.mdt
bintxt/src/: lib.rs
bjs/: Cargo.toml  README.md  README.mdt
bjs/src/: lib.rs  vec_or_str.rs
bjs/tests/: main.rs  test.js
bls/: Cargo.toml  README.md  README.mdt
bls/src/: lib.rs
bls/tests/: main.rs
boxleak/: Cargo.toml  README.md  README.mdt
burl/: Cargo.toml  README.md  README.mdt
burl/src/: lib.rs
burl/tests/: main.rs
cfha/: .envrc  Cargo.toml  README.md  README.mdt
cfha/src/: conf.rs  lib.rs
cfha/tests/: main.rs
cget/: Cargo.toml  README.md  README.mdt  test.sh
change/: Cargo.toml  README.md  README.mdt
change/src/: lib.rs
change/tests/: .gitignore  main.rs
citer/: Cargo.toml  README.md  README.mdt
citer/src/: lib.rs
citer/tests/: main.rs
ckv/: Cargo.toml  README.md  README.mdt
ckv/src/: fs.rs  lib.rs  s3.rs
clap_args/: Cargo.toml  README.md  README.mdt
clap_args/src/: lib.rs
cli_tmpl/: Cargo.toml  README.md  README.mdt  setup.sh  test.sh
cli_tmpl/src/: cli.rs  conf.rs  err.rs  lib.rs  main.rs  run.rs
click_captcha/: .gitignore  Cargo.toml  README.md  build.wasm.sh  flag.js  gen.sh  test.coffee  test.js  test.sh  wasm.sh  wasmTest.sh
cmdv/: Cargo.toml  README.md  README.mdt
cmp_len_str/: Cargo.toml  README.md  README.mdt
cnfj/: AGENTS.md  Cargo.toml  README.md  README.mdt  out.txt
cnu/: Cargo.toml  README.md  README.mdt  cn.txt  out.txt  test.py  test.sh
code_replace/: Cargo.toml  README.md  README.mdt
concat_array/: Cargo.toml  README.md  README.mdt
confdir/: Cargo.toml  README.md  README.mdt
confer/: Cargo.toml  README.md  README.mdt
cookie_expire/: Cargo.toml  README.md  README.mdt
cookie_set/: Cargo.toml  README.md  README.mdt
cookiestr/: Cargo.toml  README.md  README.mdt
cost_time/: Cargo.toml  README.md  README.mdt
doc_chunk/: Cargo.toml  README.md  README.mdt
doc_pyramid/: Cargo.toml  README.md  README.mdt
dot_hide/: Cargo.toml  README.md  README.mdt
(+1418 files in other folders)
