[workspace]
resolver = "2"
members = [
  "pgw",
  "aiapi",
  "amid",
  "aok",
  "apart",
  "static_",
  "axum_cors",
  "b62",
  # "bgu",
  "bintxt",
  "bjs",
  "burl",
  "cfha",
  "cget",
  "change",
  "citer",
  "ckv",
  # "cli_tmpl",
  "click_captcha",
  "cmdv",
  "i18_json",
  "len_mtime",
  "map_await",
  "md_title",
  "mdli",
  "mreplace",
  "mreq",
  "mysql_macro",
  "npm",
  "npmi",
  "npmv",
  "ok_or",
  "only_url",
  "pbar",
  "pc",
  "ping_ver",
  "pli",
  "pos_lines",
  "pos_next",
  "preq",
  "preq1",
  "radix_str",
  "rany",
  "refmt",
  "refresh_v",
  "rm_zero_width",
  "rtoc",
  "rvar",
  "s3_put",
  "s_",
  "set_header",
  "set_mtime",
  "sitem",
  "sline",
  "sortmap",
  "str0",
  "str2ts",
  "sts",
  "sver",
  "svg2avif",
  "svg2webp",
  "t_",
  "title_case",
  "tls_ping",
  "tlsinit",
  "_tmpl",
  "_tmpl_wasm",
  "tp",
  "trait_len",
  "trt",
  "tryn",
  "tsfmt",
  "tzst",
  "upn",
  "varurl",
  "vb",
  "ver_count",
  "ver_incr",
  "verfs",
  "waiting",
  "wxpush",
  "xbin",
  "xboot",
  "xboot/demo",
  "xerr",
  "xhash",
  "xkv",
  "xkv/demo",
  "xmail",
  "xsmtp",
  "xstr",
  "xtld",
  "yconf",
  "yml_dict_li",
  "ytree",
  "cmp_len_str",
  "cnu",
  "cookiestr",
  "dot_hide",
  "genv",
  "getc",
  "ghapi",
  "header_map",
  "hi",
  "i18_conf",
  "i18e",
  # "i18n_bgu",
  "i18n_plugin",
  "i18s",
  "i_",
  # "idns",
  "ifs",
  "iget",
  "init_dir",
  "ireq",
  "iver",
  "jarg",
  "kvcache",
  "li_pos",
  "lineiter",
  "loginit",
  "axum_layer",
  "addr_of",
  "async_wrap",
  "cost_time",
  "dstr",
  "boxleak",
  "smtptls",
  "hidden_password",
  "notify_api",
  "hsec",
  "api_token",
  "token_send",
  "aerr",
  "cookie_expire",
  "header_host",
  "ub64",
  "set_cookie",
  "index_of",
  "logwait",
  "drop",
  "intbin",
  "range_merge",
  "txtfmt",
  "is_line_break",
  "v6proxy",
  "md2htm_without_p",
  "find_close",
  "r36",
  # "hsc",
  # "i18n.site",
  # "minjs",
  # "i18n_js",
  "ft",
  "uper",
  "upgrade_verify",
  "ed25519_ph",
  "confdir",
  "upgrade_host",
  "confer",
  "idoh",
  "riter",
  "ver_from_txt",
  "down",
  # "i18",
  # "i18_hash",
]
# "cget/test_cget",

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
# panic = 'abort'
# strip = false

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
