[workspace]
resolver = "2"
members = [
  "_tmpl",
  "_tmpl_wasm",
  "addr_of",
  "aerr",
  "aier",
  "amid",
  "aok",
  "apart",
  "api_token",
  "async_wrap",
  "axum_cors",
  "axum_graceful_restart",
  "axum_graceful_restart/tests",
  "axum_layer",
  "b62",
  "bing",
  "bintxt",
  "boxleak",
  "burl",
  "cfha",
  "cget",
  "change",
  "citer",
  "ckv",
  "click_captcha",
  "clap_args",
  "cmdv",
  "cmp_len_str",
  "cnfj",
  "confdir",
  "confer",
  "cookie_expire",
  "cookiestr",
  "cost_time",
  "doc_chunk",
  "doc_pyramid",
  "dot_hide",
  "down",
  "drop",
  "dstr",
  "ed25519_ph",
  "exepid",
  "find_close",
  "frame_stream",
  "ft",
  "genv",
  "getc",
  "ghapi",
  "grpc_client",
  "header_host",
  "header_map",
  "hi",
  "hidden_password",
  "hsec",
  "i18_conf",
  "i18_json",
  "i18e",
  "i18n_plugin",
  "i18s",
  "i_",
  "idoh",
  "ifs",
  "iget",
  "index_of",
  "init_dir",
  "intbin",
  "ireq",
  "is_line_break",
  "iver",
  "jarg",
  "kvcache",
  "len_mtime",
  "li_pos",
  "lineiter",
  "loginit",
  "logwait",
  "map_await",
  "md2htm_without_p",
  "md_title",
  "mdli",
  "mreplace",
  "mreq",
  "mysql_macro",
  "notify_api",
  "npm",
  "npmi",
  "npmv",
  "ok_or",
  "only_url",
  "pbar",
  "pc",
  "pgw",
  "ping_ver",
  "pli",
  "pos_lines",
  "pos_next",
  "preq",
  "preq1",
  "r36",
  "radix_str",
  "range_merge",
  "rany",
  "refmt",
  "refresh_v",
  "reload_self",
  "reload_self/test",
  "riter",
  "rm_zero_width",
  "rtoc",
  "rvar",
  "s3_put",
  "s_",
  "set_cookie",
  "set_header",
  "set_mtime",
  "sitem",
  "sline",
  "smtptls",
  "sortmap",
  "static_",
  "str0",
  "str2ts",
  "sts",
  "sver",
  "svg2avif",
  "svg2webp",
  "t_",
  "title_case",
  "tls_ping",
  "tlsinit",
  "token_send",
  "tp",
  "trait_len",
  "trt",
  "tryn",
  "tsfmt",
  "txtfmt",
  "tzst",
  "ub64",
  "uper",
  "uper/tests",
  "upgrade_host",
  "upgrade_verify",
  "upn",
  "v6proxy",
  "varurl",
  "vb",
  "ver_count",
  "ver_from_txt",
  "ver_incr",
  "verfs",
  "volo_layer",
  "waiting",
  "wxpush",
  "x_read_ip",
  "xbin",
  "xboot",
  "xboot/demo",
  "xerr",
  "xhash",
  "xkv",
  "xkv/demo",
  "xmail",
  "xsmtp",
  "xstr",
  "xtld",
  "yconf",
  "yml_dict_li",
  "ytree",
  "tran_term",
  "tag_replace",
  "concat_array",
  "tran_fmt",
  "txt_li",
  "txt_chunk",
  "hugo_head",
  "tran_trait",
  "find_close_bucket",
  "htm_tag",
  "is_escape",
  "aiapi",
  "reqwest_client",
  "is_cn_char",
  "hashlen",
  "gemini_verify",
  "sub_host",
  "log_init",
  "path_end",
  "b255",
  "ext_name",
  "proxyfree",
  "proxy_fetch",
  "zset",
  "url_fmt",
  "biased",
  "proxy_http",
  "hysteria2",
  "reqwest_proxy",
  "uri_to_host_port",
  "kill_port",
  "restart_signal",
  "js0",
  "need",
  "rs2proto",
  "volo_boot",
  "xrpc",
  "err_exit",
  # "bgu",
  # "cli_tmpl",
  # "hsc",
  # "i18",
  # "i18_hash",
  # "i18n.site",
  # "i18n_bgu",
  # "i18n_js",
  # "idns",
  # "minjs",
]
# "cget/test_cget",

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
# panic = 'abort'
# strip = false

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
