[package]
name = "aiapi"
version = "0.2.23"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/dev/aiapi"
description = "aiapi"
keywords = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
from_yml = ["dep:saphyr"]

[dependencies]
log = "0.4.29"
sonic-rs = "0.5.8"
strum_macros = "0.28.0"
thiserror = "2.0.18"

[dependencies.rand]
version = "0.10.1"
features = ["thread_rng"]

[dependencies.reqwest]
version = "0.13.3"
default-features = false
features = ["rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.52.1"
features = ["sync"]

[dependencies.saphyr]
version = "0.0.6"
optional = true

[dev-dependencies]
aok = "0.1.18"
dirs = "6.0.0"
log_init = "0.1.34"
static_init = "1.0.4"

[dev-dependencies.reqwest_client]
path = "../reqwest_client"
features = ["client", "proxy_from_env"]
version = "0.1.14"

[dev-dependencies.xerr]
path = "../xerr"
version = "0.1.16"

[dev-dependencies.tokio]
version = "1.52.1"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

