[package]
name = "aier"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/dev/aier"
description = "aier"
keywords = []

[features]
default = []
proxy = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aok = "0.1.18"
rand = "0.9.2"
serde = "1.0.228"
sonic-rs = "0.5.5"
static_init = "1.0.4"
thiserror = "2.0.17"

[dev-dependencies]
aok = "0.1.18"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[dependencies.reqwest]
version = "0.12.24"
default-features = false
features = ["rustls-tls", "rustls-tls-native-roots", "zstd", "stream"]
