[package]
name = "alive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/3TiSite/rust.git"
homepage = "https://github.com/3TiSite/rust/tree/main/alive"
description = "use mysql to check is service alive"

[dependencies]
aok = { version = "0.1.2", path = "../aok" }
enum_dispatch = "0.3.12"
futures = "0.3.30"
hi = { version = "0.1.8", path = "../hi" }
hickory-proto = "0.24.0"
hickory-resolver = "0.24.0"
ireq = { version = "0.1.6", path = "../ireq" }
mysql_async = "0.33.0"
mysql_macro = { version = "0.1.6", path = "../mysql_macro" }
paste = "1.0.14"
reqwest = { version = "0.11.23", features = ["http3"] }
static_init = "1.0.3"
sts = { version = "0.1.13", path = "../sts" }
tracing = "0.1.40"
trt = { version = "0.1.21", path = "../trt" }
xerr = { version = "0.1.2", path = "../xerr" }
xhash = { version = "0.1.3", path = "../xhash" }
xstr = { version = "0.1.9", path = "../xstr" }

[dev-dependencies]
loginit = { path = "../loginit" }
tokio = { version = "1.35.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }

[features]
