[package]
name = "alive"
version = "0.1.42"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/3TiSite/rust.git"
homepage = "https://github.com/3TiSite/rust/tree/main/alive"
description = "use mysql to check is service alive"

[dependencies]
aok = { version = "0.1.2" }
dashmap = "5.5.3"
enum_dispatch = "0.3.12"
futures = "0.3.30"
hashlru = "0.11.0"
hi = { version = "0.1.9" }
hickory-proto = "0.24.0"
idns = { version = "0.1.8" }
ireq = { version = "0.1.7" }
len-trait = "0.6.1"
mail-send = { version="0.4.8", package="mail-send-fork"}
mysql_async = "0.33.0"
mysql_macro = { version = "0.1.17" }
paste = "1.0.14"
prost = "0.12.3"
static_init = "1.0.3"
sts = { version = "0.1.14" }
tokio = { version = "1.35.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
tracing = "0.1.40"
trt = { version = "0.1.21" }
xerr = { version = "0.1.2" }
xstr = { version = "0.1.9" }

[dev-dependencies]
loginit = { version = "0.1.8" }

[features]

[build-dependencies]
aok = "0.1.2"
genv = { version = "0.1.5" }
prost-build = "0.12.3"
