[package]
name = "alive"
version = "0.1.74"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/alive"
description = "use mysql to check is service alive"

[dependencies]
aok = { version = "0.1.3" }
dashmap = "5.5.3"
enum_dispatch = "0.3.12"
futures = "0.3.30"
genv = "0.1.7"
hi = { version = "0.1.13" }
hickory-proto = "0.24.0"
idns = { version = "0.1.18" }
ireq = { version = "0.1.7" }
len-trait = "0.6.1"
mail-send = { version = "0.4.8", package = "mail-send-fork" }
m = { version = "0.1.32", package = "mysql_macro" }
paste = "1.0.14"
preq1 = { version = "0.1.6" }
prost = "0.12.3"
static_init = "1.0.3"
sts = { version = "0.1.19" }
tokio = { version = "1.36.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
tracing = "0.1.40"
trt = { version = "0.1.28" }
xerr = { version = "0.1.11" }
xstr = { version = "0.1.10" }
mysql_async = "0.34.1"

[dev-dependencies]
loginit = { version = "0.1.10" }

[features]

[build-dependencies]
aok = "0.1.3"
genv = { version = "0.1.7" }
prost-build = "0.12.3"