[package]
name = "aliver"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/3TiSite/rust.git"
homepage = "https://github.com/3TiSite/rust/tree/main/aliver"
description = "aliver"

[dependencies]
alive = "0.1.15"
aok = { version = "0.1.2" }
axum = "0.7.3"
genv = { version = "0.1.5" }
ireq = { version = "0.1.7" }
loginit = "0.1.8"
re = { version = "0.1.5" }
static_init = "1.0.3"
sts = { version = "0.1.14" }
t3 = { version = "0.1.4" }
tokio = { version = "1.35.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
tower = { version = "0.4.13", features = ["log", "timeout"] }
tower-http = { version = "0.5.0", features = [
  "compression-full",
  "decompression-full",
] }
tracing = "0.1.40"
xerr = { version = "0.1.2" }

[dev-dependencies]

[features]
