dev-dependencies = {}
features = {}

[package]
name = "aliver"
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/aliver"
description = "aliver"

[dependencies]
axum = "0.7.5"
loginit = "0.1.10"
static_init = "1.0.3"
tracing = "0.1.40"

[dependencies.alive]
version = "0.1.74"

[dependencies.aok]
version = "0.1.3"

[dependencies.genv]
version = "0.1.7"

[dependencies.ireq]
version = "0.1.7"

[dependencies.re]
version = "0.1.5"

[dependencies.sts]
version = "0.1.19"

[dependencies.t3]
version = "0.1.6"

[dependencies.tokio]
version = "1.36.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[dependencies.tower]
version = "0.4.13"
features = ["log", "timeout"]

[dependencies.tower-http]
version = "0.5.2"
features = ["compression-full", "decompression-full"]

[dependencies.xerr]
version = "0.1.11"
