[package]
name = "aok"
version = "0.1.18"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/aok"
description = "Simplified error handling with anyhow. throw! macro returns directly / 简化 anyhow 错误处理。throw! 宏直接返回"
keywords = ["error-handling", "anyhow", "result", "macro", "throw"]

[dependencies]
anyhow = "1.0.100"