[dependencies]
aok = "0.1.17"
axum = "0.8.4"

[package]
name = "axum_cors"
version = "0.1.7"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/axum_cors"
description = "axum_cors"

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.46.1"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.docs.rs]
all-features = true
