[package]
name = "axum_graceful_restart"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/dev/axum_graceful_restart"
description = "axum_graceful_restart"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aok = "0.1.17"
axum = "0.8.4"
listeners = "0.2.1"
nix = { version = "0.30.1", features = ["signal", "process"] }
socket2 = "0.5.10"
tokio = { version = "1.45.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
] }
tracing = "0.1.41"

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.45.1"
features = ["macros", "rt", "rt-multi-thread", "sync"]