[package]
name = "axum_layer"
version = "0.1.8"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/axum_layer"
description = "axum_layer"

[package.metadata.docs.rs]
all-features = true

[features]
default = [ ]

[dependencies]
aok = "0.1.17"
axum = "0.8.1"
futures = "0.3.31"
tracing = "0.1.41"

[dependencies.genv]
version = "0.1.16"
path = "../genv"

[dependencies.tower]
version = "0.5.2"
features = [ "log", "timeout" ]

[dependencies.tower-http]
version = "0.6.2"
features = [ "compression-zstd" ]

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.3"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.43.0"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]
