features = {}

[package]
name = "b3s"
version = "0.1.74"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/b3s"
description = "blake3 sum then ed25519 sign"

[lib]
name = "b3s"
path = "src/lib.rs"

[[bin]]
name = "b3s"
path = "src/main.rs"

[dependencies]
aok = "0.1.3"
base64 = "0.21.7"
current_platform = "0.2.0"
rand = "0.8.5"
static_init = "1.0.3"

[dependencies.cget]
version = "0.1.2"
path = "../cget"

[dependencies.clap]
version = "4.4.18"
features = ["cargo"]

[dependencies.ed25519-dalek]
version = "2.1.0"
features = ["rand_core"]

[dependencies.genv]
version = "0.1.6"
path = "../genv"

[dependencies.ifs]
version = "0.1.2"
path = "../ifs"
default-features = false
features = ["hash"]

[dependencies.tokio]
version = "1.36.0"
features = ["fs", "macros", "rt", "rt-multi-thread", "time", "io-util"]

[dependencies.trt]
version = "0.1.28"
path = "../trt"

[dev-dependencies]
aok = "0.1.3"
loginit = "0.1.10"
static_init = "1.0.3"

[dev-dependencies.tokio]
version = "1.36.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
