[package]
name = "bgu"
version = "0.1.30"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/bgu"
description = "bgu"

[package.metadata.cargo-machete]
ignored = [ "prost" ]

[dependencies]
current_platform = "0.2.0"
defer-lite = "1.0.0"
ed25519-dalek = "2.1.1"
prost = "0.13.5"
rand = "0.9.1"
static_init = "1.0.4"
tracing = "0.1.41"

[dependencies.sver]
version = "0.1.10"
path = "../sver"

[dependencies.mreq]
version = "0.1.17"
path = "../mreq"

[dependencies.sts]
version = "0.1.23"
path = "../sts"

[dependencies.blake3]
version = "1.8.2"
features = [ "traits-preview" ]

[dependencies.genv]
version = "0.1.16"
path = "../genv"

[dependencies.xerr]
version = "0.1.15"
path = "../xerr"

[dependencies.aok]
version = "0.1.17"
path = "../aok"

[dependencies.ifs]
version = "0.1.46"
path = "../ifs"
default-features = false
features = [ "hash", "txz_hash_d", "fs", "dir", "conf", "rsync" ]

[dependencies.iget]
version = "0.1.17"
path = "../iget"

[dependencies.tokio]
version = "1.45.1"
features = [ "macros", "rt", "rt-multi-thread", "time", "fs", "io-util" ]

[dev-dependencies]
loginit = "0.1.18"

[dev-dependencies.tokio]
version = "1.45.1"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]

[build-dependencies]
prost-build = "0.13.5"

[build-dependencies.aok]
version = "0.1.17"
path = "../aok"
