[package]
name = "bing"
version = "0.1.3"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/dev/bing"
description = "bing"
keywords = [ ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]

[dependencies]
anyhow = "1"
static_init = "1.0.4"
tantivy-jieba = "0.15.0"
tracing = "0.1.41"

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.sts]
version = "0.1.23"
path = "../sts"

[dependencies.tantivy]
version = "0.24"
features = [ "mmap", "zstd-compression" ]
default-features = false

[dependencies.xerr]
version = "0.1.15"
path = "../xerr"

[dev-dependencies]
tracing-subscriber = "0.3"
static_init = "1.0.4"

[dev-dependencies.loginit]
path = "../loginit"
version = "0.1.18"